succesfully tested getOldestOrderPerStatus method